fix: force data-table to stretch to 100% width on desktop and bump to v2.8.3

--- a/style.css
+++ b/style.css
@@ -644,6 +644,7 @@ select.form-control {
 
 .data-table {
     width: 100%;
+    min-width: 100%;
     border-collapse: collapse;
     text-align: left;
     font-size: 0.98rem;
